First commit with clean up and a bunch of first files, details yet to comew