@@ -16,13 +16,15 @@
      limitations under the License.
 
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  
-  <groupId>dev.morling.demos</groupId>
-  <artifactId>average</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
-  
+
+  <groupId>org.rschwietzke</groupId>
+  <artifactId>1brc-for-learners</artifactId>
+  <version>1.0</version>
+  <packaging>jar</packaging>
+
   <properties>
     <maven.compiler.parameters>true</maven.compiler.parameters>
     <maven.compiler.release>21</maven.compiler.release>
@@ -30,10 +32,9 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
   </properties>
 
-  <name>My OSS Project</name>
-  <description>My Latest OSS Project</description>
-  <inceptionYear>2021</inceptionYear>
-  <url>tbd.</url>
+  <name>1BRC for Learners</name>
+  <description>This is the continuation of 1BRC as project for classic Java programming at scale.</description>
+  <inceptionYear>2024</inceptionYear>
 
   <licenses>
     <license>
@@ -48,7 +49,7 @@
       <dependency>
         <groupId>org.junit</groupId>
         <artifactId>junit-bom</artifactId>
-        <version>5.8.1</version>
+        <version>5.10.0</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -61,12 +62,6 @@
       <artifactId>junit-jupiter</artifactId>
       <scope>test</scope>
     </dependency>
-    <dependency>
-      <groupId>org.assertj</groupId>
-      <artifactId>assertj-core</artifactId>
-      <version>3.21.0</version>
-      <scope>test</scope>
-    </dependency>
   </dependencies>
 
   <build>
@@ -74,50 +69,11 @@
     <pluginManagement>
       <plugins>
         <plugin>
-          <groupId>com.mycila</groupId>
-          <artifactId>license-maven-plugin</artifactId>
-          <version>4.1</version>
-        </plugin>
-        <plugin>
-          <groupId>net.revelc.code.formatter</groupId>
-          <artifactId>formatter-maven-plugin</artifactId>
-          <version>2.16.0</version>
-          <configuration>
-            <configFile>etc/eclipse-formatter-config.xml</configFile>
-            <directories>
-              <directory>${project.build.sourceDirectory}</directory>
-              <directory>${project.basedir}/src/main/java-22</directory>
-            </directories>
-          </configuration>
-        </plugin>
-        <plugin>
-          <groupId>net.revelc.code</groupId>
-          <artifactId>impsort-maven-plugin</artifactId>
-          <version>1.9.0</version>
-          <configuration>
-            <groups>java.,javax.,org.,com.</groups>
-            <removeUnused>true</removeUnused>
-            <staticAfter>true</staticAfter>
-          </configuration>
-        </plugin>
-        <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.12.1</version>
           <configuration>
             <parameters>true</parameters>
-            <compilerArgs>
-              <!--
-                IntelliJ does not yet support the enablePreview configuration option.
-                Therefore, we use a compiler argument.
-                See https://youtrack.jetbrains.com/issue/IDEA-296303
-              -->
-              <compilerArg>--enable-preview</compilerArg>
-              <compilerArg>--add-modules</compilerArg>
-              <compilerArg>java.base,jdk.incubator.vector</compilerArg>
-              <compilerArg>--add-opens=java.base/java.lang=ALL-UNNAMED</compilerArg>
-              <compilerArg>--add-opens=java.base/jdk.internal.util=ALL-UNNAMED</compilerArg>
-            </compilerArgs>
           </configuration>
         </plugin>
         <plugin>
@@ -129,11 +85,6 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-deploy-plugin</artifactId>
           <version>3.1.1</version>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-enforcer-plugin</artifactId>
-          <version>3.3.0</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -169,155 +120,4 @@
     </pluginManagement>
 
   </build>
-  <profiles>
-    <profile>
-      <id>ci</id>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>net.revelc.code.formatter</groupId>
-            <artifactId>formatter-maven-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>validate-format</id>
-                <goals>
-                  <goal>validate</goal>
-                </goals>
-                <phase>validate</phase>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-    <profile>
-      <id>qa</id>
-      <activation>
-        <property>
-          <name>!quick</name>
-        </property>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>com.mycila</groupId>
-            <artifactId>license-maven-plugin</artifactId>
-            <configuration>
-              <header>etc/license.txt</header>
-              <strictCheck>true</strictCheck>
-              <aggregate>true</aggregate>
-              <excludes>
-                <exclude>LICENSE.txt</exclude>
-                <exclude>**/.dontdelete</exclude>
-                <exclude>**/measurements*.txt</exclude>
-                <exclude>**/measurements*.out</exclude>
-                <exclude>out_expected.txt</exclude>
-                <exclude>github_users.txt</exclude>
-                <!-- Cliff asked to be named as the copyright holder for his entry; -->
-                <exclude>src/main/java/dev/morling/onebrc/CalculateAverage_cliffclick.java</exclude>
-                <exclude>.sdkmanrc</exclude>
-              </excludes>
-            </configuration>
-            <executions>
-              <execution>
-                <goals>
-                  <goal>check</goal>
-                </goals>
-              </execution>
-            </executions>
-          </plugin>
-          <plugin>
-            <groupId>net.revelc.code.formatter</groupId>
-            <artifactId>formatter-maven-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>format</id>
-                <goals>
-                  <goal>format</goal>
-                </goals>
-                <phase>process-sources</phase>
-              </execution>
-            </executions>
-          </plugin>
-<!--          <plugin>-->
-<!--            <groupId>net.revelc.code</groupId>-->
-<!--            <artifactId>impsort-maven-plugin</artifactId>-->
-<!--            <executions>-->
-<!--              <execution>-->
-<!--                <id>sort-imports</id>-->
-<!--                <goals>-->
-<!--                  <goal>sort</goal>-->
-<!--                </goals>-->
-<!--                <phase>process-sources</phase>-->
-<!--              </execution>-->
-<!--            </executions>-->
-<!--          </plugin>-->
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-enforcer-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>enforce-plugin-versions</id>
-                <goals>
-                  <goal>enforce</goal>
-                </goals>
-                <configuration>
-                  <rules>
-                    <requireJavaVersion>
-                      <version>${maven.compiler.release}</version>
-                    </requireJavaVersion>
-                    <requirePluginVersions>
-                       <banLatest>true</banLatest>
-                       <banRelease>true</banRelease>
-                       <banSnapshots>true</banSnapshots>
-                       <phases>clean,deploy,site</phases>
-                    </requirePluginVersions>
-                  </rules>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-    <profile>
-      <id>quick</id>
-      <activation>
-        <property>
-          <name>quick</name>
-        </property>
-      </activation>
-      <properties>
-        <skipTests>true</skipTests>
-      </properties>
-    </profile>
-    <profile>
-      <id>jdk22</id>
-      <activation>
-        <jdk>22</jdk>
-      </activation>
-      <properties>
-      </properties>
-      <build>
-        <pluginManagement>
-          <plugins>
-            <plugin>
-              <artifactId>maven-compiler-plugin</artifactId>
-              <configuration>
-                <release>22</release>
-                <compileSourceRoots>
-                  <compileSourceRoot>${project.basedir}/src/main/java-22</compileSourceRoot>
-                  <!--
-                    Uncomment the next line to build the entire project with jdk22.
-                    Currently, some classes fail to compile under jdk22.
-                  -->
-                  <!-- <compileSourceRoot>${project.build.sourceDirectory}</compileSourceRoot> -->
-                </compileSourceRoots>
-              </configuration>
-            </plugin>
-          </plugins>
-        </pluginManagement>
-      </build>
-    </profile>
-  </profiles>
 </project>
